adicionando a parte de cursos na home

--- a/index.html
+++ b/index.html
@@ -63,6 +63,56 @@
         <section id="section2">
             <div class="container">
                 <h2>NOSSOS CURSOS</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img class="card-img-top" src="assets/imagens/administracao.jpg" alt="Administracao">
+                            <div class="card-body">
+                                <h3>Curso de Administração</h3>
+                                <p class="card-text">O curso incentiva o papel do administrador diante dos modelos de negócios.</p>
+                                <hr>
+                                <h4>Turmas</h4>
+                                <ul class="chipsClasses">
+                                    <li>Adm1</li>
+                                    <li>Adm2</li>
+                                    <li>Adm3</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img class="card-img-top" src="assets/imagens/administracao.jpg" alt="Administracao">
+                            <div class="card-body">
+                                <h3>Curso de Biologia</h3>
+                                <p class="card-text">A formação abrange grandes áreas de atuação, meio ambiente e saúde.</p>
+                                <hr>
+                                <h4>Turmas</h4>
+                                <ul class="chipsClasses">
+                                    <li>Bio1</li>
+                                    <li>Bio2</li>
+                                    <li>Bio3</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img class="card-img-top" src="assets/imagens/administracao.jpg" alt="Administracao">
+                            <div class="card-body">
+                                <h3>Curso de Direito</h3>
+                                <p class="card-text">Habilidades que vão facilitar o acesso a carreiras, como a de Árbitro.</p>
+                                <hr>
+                                <h4>Turmas</h4>
+                                <ul class="chipsClasses">
+                                    <li>Direito1</li>
+                                    <li>Direito2</li>
+                                    <li>Direito3</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
