acertando responsivo do sobre

--- a/sobre.html
+++ b/sobre.html
@@ -65,7 +65,7 @@
                             <p>Assim mesmo, a percepção das dificuldades prepara-nos para enfrentar situações atípicas decorrentes das formas de ação.</p>
                             <p>Todavia, o surgimento do comércio virtual garante a contribuição de um grupo importante na determinação das condições financeiras e administrativas exigidas.</p>
                             <h5>Quer gerar textos que nem esse?</h5>
-                            <a href="https://lerolero.com/">ACESSE O GERADOR LEROLERO!</a>
+                            <a href="https://lerolero.com/" target="_blank">ACESSE O GERADOR LEROLERO!</a>
                     </div>
                     <div class="col-md-4">
                         <img src="assets/imagens/quem-somos.jpg" class="img-fluid" alt="Quem Somos">
