adicionando viacep e pagina de registro e pagina de depoimentos

--- a/instrutores.html
+++ b/instrutores.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="card">
-                            <img class="card-img-top" src="assets/imagens/direito-prof.jpg"Card image cap">
+                            <img class="card-img-top" src="assets/imagens/direito-prof.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Instrutora de Direito</h5>
                                 <div class="page-wrap">
@@ -116,7 +116,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="card">
-                            <img class="card-img-top" src="assets/imagens/biologia-prof.jpg"Card image cap">
+                            <img class="card-img-top" src="assets/imagens/biologia-prof.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Instrutor de Biologia</h5>
                                 <div class="page-wrap">
@@ -143,7 +143,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="card">
-                            <img class="card-img-top" src="assets/imagens/letras-prof.jpg"Card image cap">
+                            <img class="card-img-top" src="assets/imagens/letras-prof.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Instrutor de Letras</h5>
                                 <div class="page-wrap">
