--- a/registro.html
+++ b/registro.html
@@ -63,7 +63,7 @@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputEmail4">Nome:</label>
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Nome">
+                            <input type="text" class="form-control" id="inputEmail4" placeholder="Nome">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputCpf">CPF:</label>
@@ -72,17 +72,23 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="inputEmail4">Email:</label>
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                            <label for="inputAddress">Login:</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="Login">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputPassword4">Senha:</label>
                             <input type="password" class="form-control" id="inputPassword4" placeholder="Senha">
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="inputAddress">Login:</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="Login">
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputEmail4">Email:</label>
+                            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputPassword4">Telefone:</label>
+                            <input type="text" class="form-control" id="telefoneInput" placeholder="Telefone">
+                        </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-2">
