terminando a parte de registro e tabelas

--- a/registro.html
+++ b/registro.html
@@ -66,50 +66,50 @@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputEmail4">*Nome:</label>
-                            <input type="text" class="form-control" id="inputEmail4" placeholder="Nome" required>
+                            <input type="text" class="form-control" id="inputEmail4" placeholder="Digite seu nome" required>
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputCpf">*CPF:</label>
-                            <input type="text" class="form-control" id="inputCpf" placeholder="CPF" required>
+                            <input type="text" class="form-control" id="inputCpf" placeholder="Digite seu CPF" required>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputAddress">*Login:</label>
-                            <input type="text" class="form-control" id="inputAddress" placeholder="Login" required>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="Digite seu login" required>
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputPassword4">*Senha:</label>
-                            <input type="password" class="form-control" id="inputPassword4" placeholder="Senha" required>
+                            <input type="password" class="form-control" id="inputPassword4" placeholder="Digite sua senha" required>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputEmail4">*Email:</label>
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+                            <input type="email" class="form-control" id="inputEmail4" placeholder="Digite seu email" required>
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputPassword4">*Telefone:</label>
-                            <input type="text" class="form-control" id="telefoneInput" placeholder="Telefone" required>
+                            <input type="text" class="form-control" id="telefoneInput" placeholder="Digite seu telefone" required>
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class="form-group col-md-2">
+                        <div class="form-group col-md-3">
                             <label for="cep">*CEP:</label>
-                            <input type="text" name="cep" class="form-control" id="cep" placeholder="CEP" required>
+                            <input type="text" name="cep" class="form-control" id="cep" placeholder="Digite seu CEP" required>
                         </div>
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-5">
                             <label for="cidade">*Cidade</label>
-                            <input type="text" class="form-control" name="cidade" id="cidade" placeholder="Cidade" required>
+                            <input type="text" class="form-control" name="cidade" id="cidade" placeholder="Digite sua cidade" required>
                         </div>
                         <div class="form-group col-md-4">
                             <label for="bairro">*Bairro</label>
-                            <input type="text" class="form-control" name="bairro" id="bairro" placeholder="Bairro" required>
+                            <input type="text" class="form-control" name="bairro" id="bairro" placeholder="Digite seu bairro" required>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="rua">*Endereço</label>
-                        <input type="text" class="form-control" id="rua" name="rua" placeholder="Endereço" required>
+                        <input type="text" class="form-control" id="rua" name="rua" placeholder="Digite seu endereço" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Registrar</button>
                 </form>
