--- a/registro.html
+++ b/registro.html
@@ -62,54 +62,54 @@
                 <div class="alert alert-warning" role="alert">
                     <strong>Atenção:</strong> Todos os campos com "*" são obrigatórios.
                 </div>
-                <form>
+                <form id="registerForm" method="get" action="">
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="inputEmail4">*Nome:</label>
-                            <input type="text" class="form-control" id="inputEmail4" placeholder="Digite seu nome" required>
+                            <label for="inputNameRegister">*Nome:</label>
+                            <input type="text" class="form-control" id="inputNameRegister" name="inputNameRegister" placeholder="Digite seu nome" required>
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="inputCpf">*CPF:</label>
-                            <input type="text" class="form-control" id="inputCpf" placeholder="Digite seu CPF" required>
+                            <label for="inputCpfRegister">*CPF:</label>
+                            <input type="text" class="form-control" id="inputCpfRegister" name="inputCpfRegister" placeholder="Digite seu CPF" required>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="inputAddress">*Login:</label>
-                            <input type="text" class="form-control" id="inputAddress" placeholder="Digite seu login" required>
+                            <label for="inputLoginRegister">*Login:</label>
+                            <input type="text" class="form-control" id="inputLoginRegister" name="inputLoginRegister" placeholder="Digite seu login" required>
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="inputPassword4">*Senha:</label>
-                            <input type="password" class="form-control" id="inputPassword4" placeholder="Digite sua senha" required>
+                            <label for="inputPasswordRegister">*Senha:</label>
+                            <input type="password" class="form-control" id="inputPasswordRegister" name="inputPasswordRegister" placeholder="Digite sua senha" required>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="inputEmail4">*Email:</label>
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Digite seu email" required>
+                            <label for="inputEmailRegister">*Email:</label>
+                            <input type="email" class="form-control" id="inputEmailRegister" name="inputEmailRegister" placeholder="Digite seu email" required>
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="inputPassword4">*Telefone:</label>
-                            <input type="text" class="form-control" id="telefoneInput" placeholder="Digite seu telefone" required>
+                            <label for="inputPhoneRegister">*Telefone:</label>
+                            <input type="text" class="form-control maskPhoneInput" id="inputPhoneRegister" name="inputPhoneRegister" placeholder="Digite seu telefone" required>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-3">
-                            <label for="cep">*CEP:</label>
-                            <input type="text" name="cep" class="form-control" id="cep" placeholder="Digite seu CEP" required>
+                            <label for="cep">CEP:</label>
+                            <input type="text" name="cep" class="form-control" id="cep" placeholder="Digite seu CEP">
                         </div>
                         <div class="form-group col-md-5">
-                            <label for="cidade">*Cidade</label>
-                            <input type="text" class="form-control" name="cidade" id="cidade" placeholder="Digite sua cidade" required>
+                            <label for="cidade">Cidade</label>
+                            <input type="text" class="form-control" name="cidade" id="cidade" placeholder="Digite sua cidade">
                         </div>
                         <div class="form-group col-md-4">
-                            <label for="bairro">*Bairro</label>
-                            <input type="text" class="form-control" name="bairro" id="bairro" placeholder="Digite seu bairro" required>
+                            <label for="bairro">Bairro</label>
+                            <input type="text" class="form-control" name="bairro" id="bairro" placeholder="Digite seu bairro">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="rua">*Endereço</label>
-                        <input type="text" class="form-control" id="rua" name="rua" placeholder="Digite seu endereço" required>
+                        <label for="rua">Endereço</label>
+                        <input type="text" class="form-control" id="rua" name="rua" placeholder="Digite seu endereço">
                     </div>
                     <button type="submit" class="btn btn-primary">Registrar</button>
                 </form>
@@ -141,6 +141,7 @@
         </footer>
     </body>
     <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <script src="assets/js/jquery.validate.min.js"></script>
     <script src="assets/js/jquery.mask.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/geral.js"></script>
