acertando responsivo e botando pagina de obrigado

--- a/obrigado.html
+++ b/obrigado.html
@@ -56,18 +56,10 @@
                 </ul>
             </nav>
         </header>
-        <section id="loginSection">
+        <section id="thankSection">
            <div class="container">
-                <div class="wrapper fadeInDown">
-                    <div id="formContent">
-                        <h4 class="fadeIn second">Faça seu login</h4>
-                        <form>
-                            <input type="text" id="login" class="fadeIn second" name="login" placeholder="Login" required>
-                            <input type="text" id="password" class="fadeIn third" name="login" placeholder="Senha" required>
-                            <input type="submit" class="fadeIn fourth" value="Entrar">
-                        </form>
-                    </div>
-                </div>
+                <i class="far fa-smile-wink"></i>
+                <h1>Obrigado!<br> Em breve entraremos em contato.</h1>
            </div>
         </section>
         <footer>
