--- a/registro.html
+++ b/registro.html
@@ -62,7 +62,7 @@
                 <div class="alert alert-warning" role="alert">
                     <strong>Atenção:</strong> Todos os campos com "*" são obrigatórios.
                 </div>
-                <form id="registerForm" method="get" action="">
+                <form id="registerForm" method="get" action="obrigado.html">
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="inputNameRegister">*Nome:</label>
