--- a/tabelas.html
+++ b/tabelas.html
@@ -76,7 +76,7 @@
                     <div class="col-md-9">
                         <div class="tab-content" id="v-pills-tabContent">
                             <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                                <form id="adminForm">
+                                <form id="adminForm" method="get" action="obrigado.html">
                                     <div class="form-group">
                                         <label for="nomeAdmin">*Nome:</label>
                                         <input type="text" class="form-control" id="nomeAdmin" name="nomeAdmin" placeholder="Digite seu nome" required>
@@ -94,7 +94,7 @@
                             </div>
 
                             <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                                <form id="classForm">
+                                <form id="classForm" method="get" action="obrigado.html">
                                     <div class="form-group">
                                         <label for="turmaMatricula">*Turma:</label>
                                         <select id="turmaMatricula" name="turmaMatricula" required>
@@ -126,7 +126,7 @@
                             </div>
 
                             <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-                                <form id="courseForm">
+                                <form id="courseForm" method="get" action="obrigado.html">
                                     <div class="form-group">
                                         <label for="nomeCurso">*Nome:</label>
                                         <input type="text" class="form-control" id="nomeCurso" name="nomeCurso" placeholder="Digite o nome do curso" required>
@@ -152,7 +152,7 @@
                             </div>
 
                             <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
-                                <form id="instrutorForm">
+                                <form id="instrutorForm" method="get" action="obrigado.html">
                                     <div class="form-group">
                                         <label for="nomeInstrutor">*Nome:</label>
                                         <input type="text" class="form-control" id="nomeInstrutor" name="nomeInstrutor" placeholder="Digite o nome do instrutor" required>
@@ -178,7 +178,7 @@
                             </div>
 
                             <div class="tab-pane fade" id="v-pills-classes" role="tabpanel" aria-labelledby="v-pills-classes-tab">
-                                <form id="classInstrutorForm">
+                                <form id="classInstrutorForm" method="get" action="obrigado.html">
                                     <div class="form-group">
                                         <label for="instrutorTurma">*Instrutor da turma:</label>
                                         <select id="instrutorTurma" name="instrutorTurma" required>
