--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="container">
                 <h1>Estude onde e <br>quando você quiser</h1>
                 <p>Cursinho que se adapta à sua rotina e professores que<br> te fazem entender de verdade</p>
-                <a href="#">estou interessado!</a>
+                <a href="registro.html">estou interessado!</a>
             </div>
         </section>
 
@@ -128,7 +128,7 @@
                         <h3>Fale com a gente</h3>
                         <a href="mailto:danielmaciel.siuff@gmail.com">danielmaciel.siuff@gmail.com</a>
                         <p><img src="assets/imagens/whatsapp.png" alt="Whatsapp"> +55 21 96897-5335</p>
-                        <a href="#">
+                        <a href="https://www.instagram.com/?hl=pt-br">
                             <div class="instagramTalk">
                                 <img src="assets/imagens/instagram.png" alt="Instagram"> Confira nosso instagram!
                             </div>
