--- a/registro.html
+++ b/registro.html
@@ -122,7 +122,7 @@
                         <h3>Fale com a gente</h3>
                         <a href="mailto:danielmaciel.siuff@gmail.com">danielmaciel.siuff@gmail.com</a>
                         <p><img src="assets/imagens/whatsapp.png" alt="Whatsapp"> +55 21 96897-5335</p>
-                        <a href="#">
+                        <a href="https://www.instagram.com/?hl=pt-br">
                             <div class="instagramTalk">
                                 <img src="assets/imagens/instagram.png" alt="Instagram"> Confira nosso instagram!
                             </div>
