--- a/comentarios.html
+++ b/comentarios.html
@@ -146,6 +146,8 @@
         </footer>
     </body>
     <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <script src="assets/js/jquery.validate.min.js"></script>
+    <script src="assets/js/jquery.mask.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/geral.js"></script>
 </html>
